<project>
  <modelVersion>4.0.0</modelVersion>
  <groupId>org.jmrtd</groupId>
  <artifactId>jmrtd</artifactId>
  <version>0.5.2</version>
  <packaging>jar</packaging>

  <name>JMRTD</name>
  <description>Java Machine Readable Travel Documents API.</description>
  <url>http://jmrtd.org</url>
  <licenses>
    <license>
      <name>GNU Library or Lesser General Public License (LGPL)</name>
      <url>http://www.gnu.org/licenses/lgpl.html</url>
    </license>
  </licenses>
  <scm>
    <url>https://sourceforge.net/projects/jmrtd/</url>
    <connection>scm:svn:https://svn.code.sf.net/p/jmrtd/code</connection>
  </scm>
  <developers>
    <developer>
      <id>martijno</id>
      <name>Martijn Oostdijk</name>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>11</java.version>
    <bouncycastle.version>1.73</bouncycastle.version>
    <cert-cvc.version>1.4.13</cert-cvc.version>
    <scuba-smartcards.version>0.0.19</scuba-smartcards.version>
    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
    <junit-jupiter-engine.version>5.9.3</junit-jupiter-engine.version>
    <mockito-core.version>5.3.1</mockito-core.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.sf.scuba</groupId>
      <artifactId>scuba-smartcards</artifactId>
      <version>${scuba-smartcards.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcutil-jdk18on</artifactId>
      <version>${bouncycastle.version}</version>
    </dependency>
    <dependency>
      <groupId>org.ejbca.cvc</groupId>
      <artifactId>cert-cvc</artifactId>
      <version>${cert-cvc.version}</version>
      <exclusions>
        <!--
          Cxa9261daf-3755 high vulnerability
          https://devhub.checkmarx.com/cve-details/Cxa9261daf-3755/?utm_source=jetbrains&utm_medium=referral&utm_campaign=idea
         -->
        <exclusion>
          <groupId>org.bouncycastle</groupId>
          <artifactId>bcprov-jdk15on</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit-jupiter-engine.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito-core.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
        <configuration>
          <source>${java.version}</source> <!-- depending on your project -->
          <target>${java.version}</target> <!-- depending on your project -->
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>